[package]
name = "btc_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
reqwest = "0.11.5"
tui = { version = "0.16.0", features = ["crossterm"] }
time = "0.3.3"
crossterm = "0.27.0"
serde = "1.0"
serde_json = "1.0"